all routes for resumes
